--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">MainScreen</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name"></string>
+    <string name="tab_text_1">아이디 찾기</string>
+    <string name="tab_text_2">비밀번호 찾기</string>
+    <string name="title_activity_test">Test</string>
 </resources>
