--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
-    <string name="app_name"></string>
+    <string name="app_name">SHAHBET</string>
     <string name="tab_text_1">아이디 찾기</string>
     <string name="tab_text_2">비밀번호 찾기</string>
     <string name="title_activity_test">Test</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_m_01_01_03_home">HOME</string>
+    <string name="tab_m_01_01_03_game">게임하기</string>
+    <string name="tab_m_01_01_03_predict">예측광장</string>
+    <string name="tab_m_01_01_03_priceInfo">주가정보</string>
+    <string name="tab_m_01_01_03_charge">충전하기</string>
+    <string name="tab_m_01_01_03_exchange">선물교환</string>
 </resources>
